--- a/app/src/main/res/layout/boardlist.xml
+++ b/app/src/main/res/layout/boardlist.xml
@@ -14,7 +14,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/tv_other_user"
+        android:id="@+id/tv_song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -31,7 +31,7 @@
         android:layout_marginTop="4dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/img"
-        app:layout_constraintTop_toBottomOf="@+id/tv_other_user" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_song" />
 
     <TextView
         android:id="@+id/tv_other_time"
