--- a/app/src/main/res/layout/fragment_f__board.xml
+++ b/app/src/main/res/layout/fragment_f__board.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Board">
+    tools:context=".F_Board" >
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="300dp"
         android:layout_height="80dp"
-        android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="오늘의 주제"
         android:textSize="32sp"
@@ -22,6 +22,7 @@
         android:id="@+id/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="3dp"
         android:backgroundTint="#FBE200"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -39,5 +40,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_send"
         app:layout_constraintStart_toStartOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
