--- a/app/src/main/res/layout/musiclist.xml
+++ b/app/src/main/res/layout/musiclist.xml
@@ -7,23 +7,34 @@
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="250dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/tv_other_user"
+        android:id="@+id/tv_song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="140dp"
         android:text="노래 제목"
-        android:textSize="32sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img" />
+        app:layout_constraintStart_toEndOf="@+id/img"
+        app:layout_constraintTop_toTopOf="@+id/img" />
+
+    <TextView
+        android:id="@+id/tv_singer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="singer"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/tv_song"
+        app:layout_constraintTop_toBottomOf="@+id/tv_song" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
