--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <EditText
-        android:id="@+id/et_pat_id"
+        android:id="@+id/et_name_alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
