--- a/app/src/main/res/layout/activity_join_pat.xml
+++ b/app/src/main/res/layout/activity_join_pat.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_pat_id"
+        android:id="@+id/et_name_alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
@@ -38,9 +38,9 @@
         android:ems="10"
         android:hint="비밀번호"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/et_pat_id"
-        app:layout_constraintStart_toStartOf="@+id/et_pat_id"
-        app:layout_constraintTop_toBottomOf="@+id/et_pat_id" />
+        app:layout_constraintEnd_toEndOf="@+id/et_name_alarm"
+        app:layout_constraintStart_toStartOf="@+id/et_name_alarm"
+        app:layout_constraintTop_toBottomOf="@+id/et_name_alarm" />
 
     <EditText
         android:id="@+id/et_pat_name"
