--- a/app/src/main/res/layout/fragment_f__board.xml
+++ b/app/src/main/res/layout/fragment_f__board.xml
@@ -61,6 +61,8 @@
         android:id="@+id/et_msg"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -126,12 +128,12 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView20" />
 
     <ListView
+        android:id="@+id/lv_board"
         android:layout_width="415dp"
         android:layout_height="233dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/et_msg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView48" />
 
