--- a/app/src/main/res/layout/fragment_f__mypage.xml
+++ b/app/src/main/res/layout/fragment_f__mypage.xml
@@ -7,91 +7,64 @@
     android:layout_height="match_parent"
     tools:context=".F_Mypage" >
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="0dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
     <TextView
-        android:id="@+id/textView2"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/tv_my_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="이름"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="208dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
+        android:id="@+id/tv_my_nick"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ID"
+        android:layout_height="40dp"
+        android:layout_marginStart="40dp"
+        android:text="Nick"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="259dp"
-        tools:layout_editor_absoluteY="27dp" />
+        app:layout_constraintStart_toEndOf="@+id/tv_my_name"
+        app:layout_constraintTop_toTopOf="@+id/tv_my_name" />
 
     <TextView
-        android:id="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:id="@+id/tv_my_num"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="담당의 ID"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="179dp"
-        tools:layout_editor_absoluteY="59dp" />
-
-    <TextView
-        android:id="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="제품번호"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="179dp"
-        tools:layout_editor_absoluteY="101dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/tv_my_name" />
 
     <TextView
         android:id="@+id/textView6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="50dp"
         android:text="약 알람 시간 설정"
         android:textSize="32sp"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="201dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView9"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:text="기분 통계 그래프"
         android:textSize="32sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="221dp" />
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView10"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:text="회원 정보 수정"
         android:textSize="32sp"
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="256dp" />
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <Button
         android:id="@+id/button"
@@ -104,4 +77,12 @@
         android:textSize="32sp"
         tools:layout_editor_absoluteX="90dp"
         tools:layout_editor_absoluteY="377dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/happy"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
